* update smraw.net bindings
* why is empty information value section written in info file

* complete libfvalue and test information file read/write
* configure validate libuna and libbfio check
* close segment file handle on writing when full?
* check if information file is handled correctly on close/free

Features
* allow set of segment filename during write (as alternative writing locations)
* add read and write random functions
* implement write resume
* glob of .1ofN for PREFIX (without the initial extension to help the glob function)

Tooling
* detect maximum possible segment size on file system (e.g. FAT)
* smrawinfo
  - create
  - print info from info file
* smrawverify
  - get hashes from info file

Tests:
* retrieve data from the information file on open
* make sure certain values cannot be changed if writing/reading from raw files
* add tests for Python-bindings
* information file

20160111
* Changes to Python bindings

20160109
* fixes for rpmbuild

20160108
* 2016 update
* worked on Python 3 support

20151219
* updated dependencies

20150905
* updated dependencies

20150721
* worked on tests

20150105
* 2015 update

20141229
* updated dpkg files
* updated dependencies
* updated .gitignore

20141226
* changes for updated dependencies

20141221
* worked on Python 3 support
* worked on tests

20141201
* worked on multi-threading support

20141129
* code clean up

20141120
* code clean up

20141107
* worked on multi-threading support

20141102
* bug fixes for information file

20141030
* bug fix in Python-bindings

20141026
* changes for deployment

20141022
* changes for deployment

20141021
* changes for deployment

20141007
* updated dependencies and corresponding changes
* worked on autogen.sh and synclibs.sh scripts

20140930
* removed README.macosx
* changes for project site move

20140817
* updated msvscpp files - fixes for smraw.net

20140801
* Worked on smrawmount

20140728
* updated dependencies
* fixes for FreeBSD 8 compilation